fixed dropdown menu behind slider image

--- a/style.css
+++ b/style.css
@@ -72,9 +72,10 @@ li {
   display: none;
   border-radius: 8px;
   top: 35px;
+  z-index: 10000;
 }
 
-.dropdown li + li {
+.dropdown li + li { 
   margin-top: 10px;
 }
 
@@ -190,10 +191,6 @@ li {
 }
 
 /* Fading animation */
-.fade {
-  animation-name: fade;
-  animation-duration: 1.5s;
-}
 
 @keyframes fade {
   from {opacity: .4}
